html y css sin imagen

--- a/pagina.html
+++ b/pagina.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-	<title>Pagina prueba</title>
-	<meta charset="utf-8">
+
+	<title>Programacion para noobs</title>
+	<meta charset="iso-8859-1">
 	<meta name="description" content="Pagina de practica">
 	<link rel="stylesheet" type="text/css" href="">
+	<title>Imagenes de noticias</title>
+	<link rel="stylesheet" type="text/css" href="../navegacion.css">
+
 </head>
 <body>
-	<div>
+	<header id="header" class="">
+		
+		<div align= "center">
+			<h1>Progrmacion html, css, javascript</h1>
+			<p>Tiempo al tiempo fran y caro </p>
+			<section>
+				<header>programacion en html</header>	
+			</section>
+		</div>
+
+	</header><!-- /header -->
+
+	<nav>
+		<ul>
+			<li>Principal<a href="" title=""></a></li>
+			<li>Servicios<a href="" title=""></a></li>
+			<li>Lenguajes<a href="" title=""></a></li>
+			<li>DB<a href="" title=""></a></li>
+			<li>Comunidad<a href="" title=""></a></li>
+		</ul>
+	</nav>
+
+	
+	<!--div>
 		<ul>
 			<li>principal</li>
 			<li>servicios</li>
@@ -15,14 +43,12 @@
 			<li>contactenos</li>
 			<li>nosotros</li>
 		</ul>
-	</div>
+	</div-->
 
-	<div align= "center">
-		<h1>Progrmacion html, css, javascript</h1>
-		<p>Tiempo al tiempo fran y caro </p>
-		<section>
-			<header>programacion en html</header>	
-		</section>
+	
+	
+	<div>
+		<img src="../img/python.jpg" alt="vibora" width="100%" height="70%">
 	</div>
 
 	<div>
